--- a/folios/folio_arkwright.html
+++ b/folios/folio_arkwright.html
@@ -4,19 +4,15 @@
   <meta charset="UTF-8">
   <title>Robert Veitch Arkwright 'Hold, Store, Display' Project</title>
   <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-
-      <link rel="stylesheet" href="/css/style_folio.css">
-  
+  <link rel="stylesheet" href="/css/style_folio.css">
   <link rel="icon" type="image/png" href="/faveicon.png">
-
 </head>
 
 <body>
   <div class='header-img-container torch' style='background-image: url(/folios/arkwright/img/arkwright_banner.jpg)'>
-  <img src='http://oddert.github.io/folios/arkwright/img/arkwright_banner.jpg' class="header-img" alt='Margate Page One' /></div>
+  <img src='/folios/arkwright/img/arkwright_banner.jpg' class="header-img" alt='Margate Page One' /></div>
 
 <a href='/pdfs/arkwright.pdf' target="_blank" class="a-pdf">
 
@@ -49,7 +45,7 @@
 
 <h5>
   The brief was very simple, intended for interpretation as much as deliverable outcome, to design an object, no more than 1.5 x 1.5 meters to hold and/or store and/or display another object.
-  
+
   The only other requirement was that a working prototype, or at least a proof-of-concept had to be manufactured and documented.
 </h5>
 
@@ -69,7 +65,7 @@
 
 <h5>
   I tried to inject some of this thinking into the ideas by making four of them (designs 1, 2, 4 and 5) adaptable and/or modular, making one (design 3) orientated towards personal reflection and individual-base and one designed to be aesthetically contemporary but aimed at lower cost markets.
-  
+
   I was in the mid development phase for one other the three ideas I wanted to take forward when we were informed that the scholarship was cancelled. I developed idea five through to a prototype and may pick up on some of the others, specifically ideas one, three and five at some point as I believe there is potential in them for a unique design solution.
 </h5>
 
