--- a/folios/folio_fusion_poster.html
+++ b/folios/folio_fusion_poster.html
@@ -4,19 +4,15 @@
   <meta charset="UTF-8">
   <title>Robert Veitch Fusion Poster</title>
   <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-
-      <link rel="stylesheet" href="/css/style_folio.css">
-  
+  <link rel="stylesheet" href="/css/style_folio.css">
   <link rel="icon" type="image/png" href="/faveicon.png">
-
 </head>
 
 <body>
   <div class='header-img-container torch' style='background-image: url(/folios/fusion/img/fusion_banner.png)'>
-  <img src='http://oddert.github.io/folios/fusion/img/fusion_banner.png' class="header-img" alt='Fusion Banner Image' /></div>
+  <img src='/folios/fusion/img/fusion_banner.png' class="header-img" alt='Fusion Banner Image' /></div>
 
 <a href='/pdfs/Torch_Project.pdf' target="_blank" class="a-pdf">
 
@@ -62,7 +58,7 @@ This is something I very much agree with and so was excited to participate in th
   <p class="img-footer">Final Poster Design</p>
 </div>
 
-<h5>Utilising some previously devised archetypes and new techniques,this was the final design which was well accepted by the technical team for use in the project. 
+<h5>Utilising some previously devised archetypes and new techniques,this was the final design which was well accepted by the technical team for use in the project.
 </h5>
 
 <div class="footer">
