--- a/folios/folio_station_lighting.html
+++ b/folios/folio_station_lighting.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class='header-img-container torch' style='background-image: url(/folios/station/img/station_banner.jpg)'>
-  <img src='http://oddert.github.io/folios/station/img/station_banner.jpg' class="header-img" alt='Margate Page One' /></div>
+  <img src='/folios/station/img/station_banner.jpg' class="header-img" alt='Margate Page One' /></div>
 
 <a href='/pdfs/station_lighting.pdf' target="_blank" class="a-pdf">
 
@@ -37,7 +37,7 @@
 
 <h5>
   As part of the Higher Product Design Course, as with Intermediate Two, we must produce a Design Proposal as a prelude to the <a href="http://oddert.github.io/folios/folio_toy.html">Design Assignment</a> which comprised 50% of our final grade.
-  
+
   The brief chosen was to create a platform lighting system for a fictional lucrative rail operator to use on all its station platforms with few restrictions placed on functionality and cost.
 </h5>
 
@@ -48,9 +48,9 @@
 
 <h5>
   This project was our first real chance to experiment an innovate as the product typology, its placement (multiple units on a platform) and restrictions placed by the brief were all very open.
-  
+
   Four of my original ideas were built on the premise that a lighting dimension could be built into an alternative function, that the functional part of a light is the light emitted and that the product to emit the light was merely a ‘casing’, a means to an end.
-  
+
   In this way, a lighting project can be thought of as a project to design a new way to achieve the generation and projection of light.
 </h5>
 
@@ -71,19 +71,19 @@
 <h5>
   My second idea was built on the idea that a piece of lighting could be ornamental as well as functional, as most platform lighting is purely functional. The opens to emit light, transforming into a solid sphere during the day to evoke a sense of mystery and intrigue by being a piece of sculpture as much an emitter of light.
 </h5>
-  
+
 <div class="img-box text-center">
   <img class="ver" src='/folios/station/img/station_three_final.jpg' alt="Final manual render" />
   <p class="img-footer">The final manual render.</p>
 </div>
-  
+
 <h5>
   The final design chosen was the media display unit which incorporated elements from other ideas such as the rotating light cover from idea six. The final design refined the notion of projecting light along the floor by emitting light directed down from the floor to about chest height allowing for some ambient spread.
-  
+
   Looking back on the project I am still pleased with the outcome but have some reservations about the means by which the outcome was created.
-  
+
   The brief’s looseness on function, cost and location allowed for some inventive ideas but none of those ideas really solved a problem. I tried to make ideas which enhanced the user experience but the lack of research to form the foundations was, in hindsight, a hindrance.
-  
+
   If I were to take on this brief now, I would want to do a great deal more research, finding a comparable rail operator and defining a set of problems, areas for improvement and constraints to follow.
 </h5>
 
