--- a/folios/folio_torch.html
+++ b/folios/folio_torch.html
@@ -4,19 +4,15 @@
   <meta charset="UTF-8">
   <title>Robert Veitch Emergancy Torch Project</title>
   <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-
-      <link rel="stylesheet" href="/css/style_folio.css">
-  
+  <link rel="stylesheet" href="/css/style_folio.css">
   <link rel="icon" type="image/png" href="/faveicon.png">
-
 </head>
 
 <body>
   <div class='header-img-container torch' style='background-image: url(/folios/torch/img/175.jpg)'>
-  <img src='http://oddert.github.io/folios/torch/img/175.jpg' class="header-img" alt='Margate Page One' /></div>
+  <img src='/folios/torch/img/175.jpg' class="header-img" alt='Margate Page One' /></div>
 
 <a href='/pdfs/Torch_Project.pdf' target="_blank" class="a-pdf">
 
@@ -67,16 +63,16 @@ My final design functioned primarily as a torch with functionality built in to g
   <img class="hor" src='/folios/torch/img/torch_three_concept.jpg' alt="Final presentation board" />
   <p class="img-footer">Final Presentation Board</p>
 </div>
-  
+
 <div class="img-box text-center">
   <img class="hor" src='/folios/torch/img/torch_four_patch.jpg' alt="Mid way patch concept" />
   <p class="img-footer">Second Final Presentation Board</p>
 </div>
 
-<h5>Reflecting back on the project I was pleased overall with the outcome, particularly with the iterative development of the products functionality and form, however the end solution was a bit ‘Jekyll-Hyde’ in that several typologies had been hybridised rather than their concepts synthesised. 
-  
+<h5>Reflecting back on the project I was pleased overall with the outcome, particularly with the iterative development of the products functionality and form, however the end solution was a bit ‘Jekyll-Hyde’ in that several typologies had been hybridised rather than their concepts synthesised.
+
   Rather than create a combination of a survival knife and torch’s functionality, I had simply designed a survival knife with a light on the front. In addition, questions could be asked about the efficiency of the thermos-electric generator and the specification of the LED’s used.
-  
+
 I may revisit this concept in the future and take these considerations into account but over-all, the project was a good exercise and extension of the basic skills involved in physical product design.
 </h5>
 
