--- a/folios/folio_victorinox.html
+++ b/folios/folio_victorinox.html
@@ -4,19 +4,15 @@
   <meta charset="UTF-8">
   <title>Robert Veitch Victorinox Project</title>
   <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-
-      <link rel="stylesheet" href="/css/style_folio.css">
-  
+  <link rel="stylesheet" href="/css/style_folio.css">
   <link rel="icon" type="image/png" href="/faveicon.png">
-
 </head>
 
 <body>
   <div class='header-img-container torch' style='background-image: url(/folios/victorinox/img/victorinox_banner.png)'>
-  <img src='http://oddert.github.io/folios/victorinox/img/victorinox_banner.png' class="header-img" alt='Victorinox design three' /></div>
+  <img src='/folios/victorinox/img/victorinox_banner.png' class="header-img" alt='Victorinox design three' /></div>
 
 <a href='/pdfs/victorinox.pdf' target="_blank" class="a-pdf">
 
@@ -37,7 +33,7 @@
 </h4>
 
 <h5>
-  The competition is one of the most well-known repeating challenges on the site with little to no restrictions place on the aesthetic theme or outcome. In recent years a general theme has been defined but for the 2015 competition it was left open. 
+  The competition is one of the most well-known repeating challenges on the site with little to no restrictions place on the aesthetic theme or outcome. In recent years a general theme has been defined but for the 2015 competition it was left open.
 </h5>
 
 <div class="img-box text-center">
@@ -65,13 +61,13 @@
 
 <h5>
   The first of my designs played on the idea of smart devices (amongst other products) being compared to the swiss army knife to describe them as versatile and useful, eg “This phone can do anything, it’s the swiss army knife of modern phones” by representing each of the functions of the knife as an ‘app’ icon on a phone graphic.
-  
+
   The next (top left) looks at trying to capture motion and energy through use of blown inks and fast, un-coordinated brush strokes.
-  
+
   The last design is similar in that it uses a bright spectrum of colours to convey dynamism. The design uses they symbolism of a rainbow or spectrum to represent diversity of people. This is to push the idea of social acceptance and accessibility as the colours connect the design to the LGBTQ flag but do not make a direct connection.
-  
+
   In hindsight, it may have been prudent to make the LGBTQ connection stronger to cement the message but I wanted to keep interpretations for the design as open as possible.
-  
+
   For all variants of the promotional images and details on the process and inspiration please see the pdf link.
 </h5>
 
