--- a/folios/folio_thematic.html
+++ b/folios/folio_thematic.html
@@ -4,19 +4,15 @@
   <meta charset="UTF-8">
   <title>Robert Veitch Torch Thematic</title>
   <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-
-      <link rel="stylesheet" href="/css/style_folio.css">
-
+  <link rel="stylesheet" href="/css/style_folio.css">
   <link rel="icon" type="image/png" href="/faveicon.png">
-
 </head>
 
 <body>
   <div class='header-img-container thematic' style='background-image: url(/folios/thematic/img/thematic_banner.png)'>
-  <img src='http://oddert.github.io/folios/thematic/img/thematic_banner.png' class="header-img" alt='Thematic Banner Image' /></div>
+  <img src='/folios/thematic/img/thematic_banner.png' class="header-img" alt='Thematic Banner Image' /></div>
 
 <a href='/pdfs/thematic.pdf' target="_blank" class="a-pdf">
 
@@ -71,7 +67,7 @@
   <img class="hor" src='/folios/thematic/img/thematic_four_leaflet.jpg' alt="Faux leaflet" />
   <p class="img-footer">The leaflet showing faux-company details</p>
 </div>
-  
+
 <div class="img-box text-center">
   <img class="hor" src='/folios/thematic/img/thematic_five_poster.jpg' alt="Faux poster" />
   <p class="img-footer">One of the posters produced.</p>
@@ -82,7 +78,7 @@
 </h5>
 
   <iframe src="https://myhub.autodesk360.com/ue2b6fbda/shares/public/SH7f1edQT22b515c761e044efc47eca3f5d0?mode=embed" width="800" height="600" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
-  
+
 <div class="footer">
   <p class="footer-name text-center"><a href='http://oddert.github.io/#page2'>By Robert Veitch</p></a>
 
