--- a/folios/folio_toy.html
+++ b/folios/folio_toy.html
@@ -4,19 +4,15 @@
   <meta charset="UTF-8">
   <title>Robert Veitch Educational Toy</title>
   <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-
-      <link rel="stylesheet" href="/css/style_folio.css">
-
+  <link rel="stylesheet" href="/css/style_folio.css">
   <link rel="icon" type="image/png" href="/faveicon.png">
-
 </head>
 
 <body>
   <div class='header-img-container torch' style='background-image: url(/folios/higher_assignment/img/higher_assignment_banner.jpg)'>
-  <img src='http://oddert.github.io/folios/higher_assignment/img/higher_assignment_banner.jpg' class="header-img" alt='Toy Banner Image' /></div>
+  <img src='/folios/higher_assignment/img/higher_assignment_banner.jpg' class="header-img" alt='Toy Banner Image' /></div>
 
 <a href='/pdfs/higher_assignment.pdf' target="_blank" class="a-pdf">
 
