--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
             <p class="icon_desc">An interactive station installation acting as an alternative lighting system.</p>
           </div>
         </a>
-        <a href='/folios/folio_torch.html' target='_blank'>
-          <div class="col-sm-4 project longevity">
+        <a href='/folios/folio_root_to_root.html' target='_blank'>
+          <div class="col-sm-4 project root">
             <div class="cover"></div>
-            <h2 class="icon_title">Longevity</h2>
-            <p class="icon_desc">An emergency survival torch designed to explore the design process applied to a specific consumer good.</p>
+            <h2 class="icon_title">Root to Root</h2>
+            <p class="icon_desc">A systems design initiative manifesting as a supermarket campaign to reduce food waste.</p>
           </div>
         </a>
         <a href='/folios/sparda/img/sparda_banner.jpg' target='_blank'>
@@ -159,7 +159,13 @@
             <p class="icon_desc">An exploration into a 'holding device' for a consumer good.</p>
           </div>
         </a>
-
+        <a href='/folios/folio_torch.html' target='_blank'>
+          <div class="col-sm-4 project longevity">
+            <div class="cover"></div>
+            <h2 class="icon_title">Longevity</h2>
+            <p class="icon_desc">An emergency survival torch designed to explore the design process applied to a specific consumer good.</p>
+          </div>
+        </a>
       </div>
 
       <div class="row">
