Added Root to Root content and images

--- a/folios/folio_root_to_root.html
+++ b/folios/folio_root_to_root.html
@@ -25,59 +25,94 @@
 
 </a>
 
-<h1 class="text-center">Polymat kitchen grip assistance</h1>
+<h1 class="text-center">The Root to Root Initiative</h1>
 
-<h4 class="text-center">Polymat is a silicone grip mat designed to tackle issues involved in the kitchen where the user cannot properly grip an item which will otherwise slide about.</h4>
+<h4 class="text-center">
+  Root to Root is a piece of systems design which manifests towards the public as a supermarket campaign and aims to address some of the systemic underpinning of food waste.
+</h4>
 
 <h5>
-  For the first Unit 7 project we were asked to consider the concept of a multi-generational kitchen in the context of human-centred design. Minority groups including the disabled and elderly are often if not completely overlooked in design with a great many products promising to cater to their needs being ‘gadgety’ attempts to make a quick dollar.
- </h5>
-
-<div class="img-box text-center">
-  <img class="hor" src='/folios/root_to_root/img/ONE.png' alt="" />
-  <p class="img-footer"></p>
-</div>
-
-<h5>Less than a quarter of people with physical disabilities are born with them, working with Alex (in the images above) we explored the idea of how even a minor impairment (in his case the depleted ability of the left side of his body) can greatly affect the manipulation of kitchen equipment. In particular because a lack of ability to stabilise an item leads to it sliding around.
-
-I became interested in the idea of onset impairment or impairments that will go away eventually (eg broken limb). The market is full of gadgets and products ranging form the genuinely innovative to the obstructive and absurd.
+  Almost half of all food produced for consumption is wasted in the west. This brief asked us to consider the problem from the perspective of behaviours and human-cantered design. With my project, I wanted to analyse the underlying systemic issues to see if the behaviours they produce could be subverted.
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/root_to_root/img/TWO.jpg' alt="" />
-  <p class="img-footer"></p>
+  <img class="hor" src='/folios/root_to_root/img/touchpoints.jpg' alt="The three main touchpoints" />
+  <p class="img-footer">The submision 'hero image' showing the three touch points and the scheme's logo.</p>
 </div>
 
 <h5>
-  I focused primarily on the kitchen sink, as washing dishes proves a key point of importance to food preparation, looking to create a responsive basin which provided variable resistance to pressure. The idea is that, where sliding objects becomes an issue, the user will simply push harder and the basin will grip the object.
+  Root to Root, the name inspired from ‘Cradle to Cradle’, has three main consumer touch points aimed at closing the loop of food production and communicating an idea of circular economy in customers with the intention of driving not only change in individual behaviours but also attitudes towards waste in general.
+
+  This is based on my research that found patterns of waste are often associated with structural aspects of the way modern life is organised, to name a few; lack of time leading to rushed shopping trips, the notion of the ‘weekly shop’ and need to have food stocked at home, large suburban areas dominated by automobiles, said areas being served by large chain supermarkets.
+
+  All of which leads to: purchasing in bulk, impulse purchases, massive amounts of ‘efficient’ packaging, buying food to early, storing food for too long and so forth. Root to Root was specifically aimed at these suburban dwellers and the large chain superstores that are often their sole source of groceries.
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/root_to_root/img/THREE.png' alt="" />
-  <p class="img-footer"></p>
-</div>
-
-<div class="img-box text-center">
-  <img class="hor" src='/folios/root_to_root/img/FOUR.jpg' alt="" />
-  <p class="img-footer">Second Final Presentation Board</p>
+  <img class="hor" src='/folios/root_to_root/img/both_posters.jpg' alt="Two Root to Root posters" />
+  <p class="img-footer">Two custoomer-facing posters advertising the initiative.</p>
 </div>
 
 <h5>
-   This idea developed into a silicone mat with a variable texture surface designed to prodive a range of friction across as large a range of items as possible. Many sample patterns were designed, 3d printed and cast to settle on the optimal pattern.
+  Phase One, Retail: Fresh produce is now sold in the style of a farmers market, with minimal packaging, replaced with paper packaging and much of the foliage and roots left on. This is done for numerous reasons; to connect users to the ‘reality’ of food (away from intensive processing), to keep preservatives in the soil, reduce packaging waste for bullk-buyers, reduce food waste for people seeking small quantities and so forth.
+
+  This also connects to the other components in that many fruit and vegetables can be revived long after they would be assumed useless by placing them in water or planting them, assuming enough foliage and roots are attached.
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/root_to_root/img/FIVE.jpg' alt="" />
-  <p class="img-footer">Second Final Presentation Board</p>
+  <img class="hor" src='/folios/root_to_root/img/compost_diagram.jpg' alt="The compost collector and system diagram" />
+  <p class="img-footer">A sample bin designed to collect user's compost much as the users can already use a bottle bank.</p>
 </div>
 
 <h5>
-   A final ‘looks-like’ model was produced largely by CNC milling, Laser cutting and painting with a silicone rubber. It was unfortunately deemed too costly to cast in the target material.
+  Phase two, Disposal: Customers without access to composting facilities can bring in their food waste which, leveraging the existing distribution networks to put the waste through a process of separate-source organics, composted and reused in the production process.
+</h5>
 
-  Reflecting on the project I wonder how imaginative the solution actually was. Visually striking perhaps but does it not simply add the plethora of Gadgets? Would users actually consider using it after or before impairment? Was there actually a change to the kitchen ‘System’? Did I play it safe?
+<div class="img-box text-center">
+  <img class="hor" src='/folios/root_to_root/img/community_market.png' alt="Community Market" />
+  <p class="img-footer">A render of how one community market may be sittuated. Size, location and extra embelishment would depend on the active interest displayed by the locals. The same boexes used in the 'Retail' phase would be used, keeping costs to near zero.</p>
+</div>
 
-  This project especially was a chance to consider my position in relation to design, whilst I am more than happy with the outcome I find it imperative to recognise what this product is not, and what future outcomes must try harder to incorporate.
+<h5>
+  Phase three, Community engagement: A mini community market will be hosted in store where people can bring in sprouted vegetables or experimentations in horticulture and give them to someone who could make use.
 
+  This is intended to build on the current trend for home food-growing and contribute to community building, creating a focal point much like a community noticeboard at the entrance to the shop.
+</h5>
+
+<div class="img-box text-center">
+  <img class="hor" src='/folios/root_to_root/img/community_market.png' alt="Community Market" />
+  <p class="img-footer">A render of how one community market may be sittuated. Size, location and extra embelishment would depend on the active interest displayed by the locals. The same boxes used in the 'Retail' phase would be used, keeping costs to near zero.</p>
+</div>
+
+<h5>
+  Community engagement: A mini community market will be hosted in store where people can bring in sprouted vegetables or experimentations in horticulture and give them to someone who could make use.
+
+  This is intended to build on the current trend for home food-growing and contribute to community building, creating a focal point much like a community noticeboard at the entrance to the shop.
+</h5>
+
+<div class="img-box text-center">
+  <img class="hor" src='/folios/root_to_root/img/both_leaflet.jpg' alt="Instructional leaflet" />
+  <p class="img-footer">The promotioal leaflet giving home-horticulture inspiration.</p>
+</div>
+
+<div class="img-box text-center">
+  <img class="hor" src='/folios/root_to_root/img/simple_poster.jpg' alt="Community Market simple poster" />
+  <p class="img-footer">A sappy poster to generate curiosity in the community market part of the initiative.</p>
+</div>
+
+<h5>
+  Branding and communication plays an integral role in the Root to Root scheme, this leaflet is one of a range of materials produced to aid this, communicating the precedent and system in plain terms. On the reverse side is a mini poster detailing ideas for small-scale, indoor horticulture to incentivise users to take an interest.
+
+  The second image is one of a series of simple posters, taking design cues from current advertising trends with large supermarkets. This particular poster introduces the community market by presenting a ‘useless’ vegetable and a use for it.
+</h5>
+
+<div class="img-box text-center">
+  <img class="hor" src='/folios/root_to_root/img/system_overview.jpg' alt="System flow diagram" />
+  <p class="img-footer">Overall system flow diagram.</p>
+</div>
+
+<h5>
+  A flow chart overview detailing the total resource flows around the supermarket supply chain once Root to Root is implemented.
 </h5>
 
 <div class="footer">
