Fixed typo on all folio mini pages that somehow slped past me this entire time

--- a/folios/folio_polymat.html
+++ b/folios/folio_polymat.html
@@ -81,7 +81,7 @@ I became interested in the idea of onset impairment or impairments that will go 
 </h5>
 
 <div class="footer">
-  <p class="footer-name text-center"><a href='http://oddert.github.io/#page2'>By Robert Veitch</p></a>
+  <p class="footer-name text-center">By <a href='http://oddert.github.io/#page2'>Robyn Veitch</p></a>
 
   <!--<div class="container row">
 
