--- a/folios/folio_ccv.html
+++ b/folios/folio_ccv.html
@@ -9,7 +9,7 @@
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
       <link rel="stylesheet" href="/css/style_folio.css">
-  
+
   <link rel="icon" type="image/png" href="/faveicon.png">
 
 </head>
@@ -37,7 +37,7 @@
 </h4>
 
 <h5>
-  The device was designed over the summer between fourth and fifth year of high school to use an open source software called Community Core Vison designed for this purpose. 
+  The device was designed over the summer between fourth and fifth year of high school to use an open source software called Community Core Vison designed for this purpose.
 </h5>
 
 <div class="img-box text-center">
@@ -55,7 +55,7 @@
 </div>
 
 <h5>
-  The assembly was designed to be aesthetic but functional, the less light that leaks in form the outside, the more sensitive the IR camera will be and the clearer the projected image will be. 
+  The assembly was designed to be aesthetic but functional, the less light that leaks in form the outside, the more sensitive the IR camera will be and the clearer the projected image will be.
 </h5>
 
 <div class="img-box text-center">
@@ -68,7 +68,7 @@
 </h5>
 
 <div class="footer">
-  <p class="footer-name text-center"><a href='http://oddert.github.io/#page2'>By Robert Veitch</p></a>
+  <p class="footer-name text-center">By <a href='http://oddert.github.io/#page2'>Robyn Veitch</p></a>
 
   <!--<div class="container row">
     <div class="col-xs-4 text-center">
