--- a/folios/folio_margate.html
+++ b/folios/folio_margate.html
@@ -80,7 +80,7 @@ In addition I think the project could have benefited from more primary research 
 </h5>
 
 <div class="footer">
-  <p class="footer-name text-center"><a href='http://oddert.github.io/#page2'>By Robert Veitch</p></a>
+  <p class="footer-name text-center">By <a href='http://oddert.github.io/#page2'>Robyn Veitch</p></a>
 
   <!--<div class="container row">
 
