--- a/folios/folio_station_lighting.html
+++ b/folios/folio_station_lighting.html
@@ -88,7 +88,7 @@
 </h5>
 
 <div class="footer">
-  <p class="footer-name text-center"><a href='http://oddert.github.io/#page2'>By Robert Veitch</p></a>
+  <p class="footer-name text-center">By <a href='http://oddert.github.io/#page2'>Robyn Veitch</p></a>
 
   <!--<div class="container row">
     <div class="col-xs-4 text-center">
