--- a/folios/folio_torch.html
+++ b/folios/folio_torch.html
@@ -77,7 +77,7 @@ I may revisit this concept in the future and take these considerations into acco
 </h5>
 
 <div class="footer">
-  <p class="footer-name text-center"><a href='http://oddert.github.io/#page2'>By Robert Veitch</p></a>
+  <p class="footer-name text-center">By <a href='http://oddert.github.io/#page2'>Robyn Veitch</p></a>
 
   <!--<div class="container row">
     <div class="col-xs-4 text-center">
