--- a/index.html
+++ b/index.html
@@ -312,7 +312,8 @@ I’m currently studying BA Product Design at Central Saint Martins, UAL, having
           </div>
 
             <div class="page_profile-links-box">
-            <h3 class="text-center page_profile-links"><i class="fa fa-envelope"></i> robertveitch491@gmail.com</h3>
+            <!-- <h3 class="text-center page_profile-links"><i class="fa fa-envelope"></i> robertveitch491@gmail.com</h3> -->
+            <h3 class="text-center page_profile-links"><i class="fa fa-envelope"></i> r.veitch0420171@arts.ac.uk</h3>
             <h3 class="text-center page_profile-links"><i class="fa fa-phone"></i> (+44) 07767 297041</h3>
             <h3 class="text-center page_profile-links"><i class="fa fa-skype"></i> odderte</h3>
             </div>
