--- a/folios/data-vis-projects.html
+++ b/folios/data-vis-projects.html
@@ -12,6 +12,7 @@
     <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
     <script type="text/babel" src="/js/data-vis-projects.js"></script>
     <link type="text/css" href="/css/data-vis-projects.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="/faveicon.png">
 
   </head>
   <body>
