--- a/folios/folio_thematic.html
+++ b/folios/folio_thematic.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Robert Veitch Torch Thematic</title>
+  <title>Robyn Veitch Torch Thematic</title>
   <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
