--- a/folios/folio_margate.html
+++ b/folios/folio_margate.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class='header-img-container margate'>
-  <img src='/folios/margate/img/1.jpg' class="header-img" alt='Margate Page One' /></div>
+  <img src='https://goo.gl/oEyn6i' class="header-img" alt='Margate Page One' /></div>
 
 <a href='/pdfs/margate.pdf' target="_blank" class="a-pdf">
 
