Shrunk some images for Root to Root and awaped out a rouge png for jpeg that sneeky son of a git

--- a/folios/folio_root_to_root.html
+++ b/folios/folio_root_to_root.html
@@ -69,7 +69,7 @@
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/root_to_root/img/community_market.png' alt="Community Market" />
+  <img class="hor" src='/folios/root_to_root/img/community_market.jpg' alt="Community Market" />
   <p class="img-footer">A render of how one community market may be sittuated. Size, location and extra embelishment would depend on the active interest displayed by the locals. The same boexes used in the 'Retail' phase would be used, keeping costs to near zero.</p>
 </div>
 
