fixed footer on data-vis-projects

--- a/folios/data-vis-projects.html
+++ b/folios/data-vis-projects.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Data Visualisation Projects</title>
+    <title>Robyn Veitch Data Visualisation Projects</title>
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
@@ -12,7 +12,6 @@
     <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
     <script type="text/babel" src="/js/data-vis-projects.js"></script>
     <link type="text/css" href="/css/data-vis-projects.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="/faveicon.png">
 
   </head>
   <body>
@@ -20,7 +19,7 @@
       <h1 class="headline">Data Visualisation Projects</h1>
       <div class="subhead_container">
         <h4 class="subhead">
-          The Data Visualisation certification is a (now Legacy) freeCodeCamp <i class="fa fa-free-code-camp"></i> certification centred around building data visualisation apps with D3.js.
+          The Data Visualisation certification is a (now Legacy) <a href='https://www.freecodecamp.org/oddert'>freeCodeCamp <i class="fa fa-free-code-camp"></i></a> certification centred around building data visualisation apps with <a href='https://d3js.org/'>D3.js</a>.
         </h4>
         <p class="description">
           D3 is a highly powerful set of tools designed to offer a level of control and potential not found in typical ‘chart making’ programs / libraries.
@@ -30,5 +29,11 @@
       </div>
       <div id="root"></div>
     </div>
+
+    <section class="footer">
+      <h4>Website designed and built by <a target="_blank" href="https://www.linkedin.com/in/robert-veitch-582aa3b6/">Robyn Veitch</a>.</h4>
+      <h5><i class="fa fa-copyright"></i> Copyright 2018 All rights reserved.</h5>
+    </section>
+
   </body>
 </html>
