Added the data-vis, backend and Game of Life projects to the main folio section

--- a/index.html
+++ b/index.html
@@ -245,6 +245,32 @@
             </p>
           </div>
         </a>
+        <a href='https://codepen.io/Oddert/full/POwgdP/' target='_blank'>
+          <div class="col-sm-4 project gameOfLife">
+            <div class="cover"></div>
+            <h2 class="icon_title">Conway's Game of Life</h2>
+            <p class="icon_desc">John Horton Conway's iconic Game of Life created with React.</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="row">
+        <a href='/folios/data-vis-projects.html' target='_blank'>
+          <div class="col-sm-4 project datavis">
+            <div class="cover"></div>
+            <h2 class="icon_title">Data Visualisation</h2>
+            <p class="icon_desc">View all data visualisation projects and apps.
+            </p>
+          </div>
+        </a>
+        <a href='/folios/backend-projects.html' target='_blank'>
+          <div class="col-sm-4 project backend">
+            <div class="cover"></div>
+            <h2 class="icon_title">API / Microservices</h2>
+            <p class="icon_desc">View all backend API and Microservice projects.
+            </p>
+          </div>
+        </a>
         <a href='https://codepen.io/collection/DRoyOg/' target='_blank'>
           <div class="col-sm-4 project moreCode">
             <div class="cover"></div>
