--- a/folios/folio_fusion_poster.html
+++ b/folios/folio_fusion_poster.html
@@ -14,7 +14,7 @@
   <div class='header-img-container torch' style='background-image: url(/folios/fusion/img/fusion_banner.png)'>
   <img src='/folios/fusion/img/fusion_banner.png' class="header-img" alt='Fusion Banner Image' /></div>
 
-<a href='/pdfs/Torch_Project.pdf' target="_blank" class="a-pdf">
+<!-- <a href='/pdfs/Torch_Project.pdf' target="_blank" class="a-pdf">
 
   <div class="pdf-link text-center">
     <i class="fa fa-2x fa-file-pdf-o"></i>
@@ -24,7 +24,7 @@
     <p>Click here for the full project in pdf format</p>
   </div>
 
-</a>
+</a> -->
 
 <h1 class="text-center">National Five Research Project Prototype</h1>
 
@@ -78,7 +78,7 @@ This is something I very much agree with and so was excited to participate in th
     </div>
   </div>  -->
 
-  <p class="footer-arrow"><i class="fa fa-long-arrow-left"></i> Click here for the full project in downloadable pdf (opens in new tab)</p>
+  <!-- <p class="footer-arrow"><i class="fa fa-long-arrow-left"></i> Click here for the full project in downloadable pdf (opens in new tab)</p> -->
 
 </div>
 
