Fixed typo on thematic page

--- a/folios/folio_thematic.html
+++ b/folios/folio_thematic.html
@@ -80,7 +80,7 @@
   <iframe src="https://myhub.autodesk360.com/ue2b6fbda/shares/public/SH7f1edQT22b515c761e044efc47eca3f5d0?mode=embed" width="800" height="600" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
 
 <div class="footer">
-  <p class="footer-name text-center"><a href='http://oddert.github.io/#page2'>By Robert Veitch</p></a>
+  <p class="footer-name text-center"><a href='http://oddert.github.io/#page2'>By Robyn Veitch</p></a>
 
   <!--<div class="container row">
     <div class="col-xs-4 text-center">
