commented out pdf link from thematic page

--- a/folios/folio_thematic.html
+++ b/folios/folio_thematic.html
@@ -14,7 +14,7 @@
   <div class='header-img-container thematic' style='background-image: url(/folios/thematic/img/thematic_banner.png)'>
   <img src='/folios/thematic/img/thematic_banner.png' class="header-img" alt='Thematic Banner Image' /></div>
 
-<a href='/pdfs/thematic.pdf' target="_blank" class="a-pdf">
+<!-- <a href='/pdfs/thematic.pdf' target="_blank" class="a-pdf">
 
   <div class="pdf-link text-center">
     <i class="fa fa-2x fa-file-pdf-o"></i>
@@ -24,7 +24,7 @@
     <p>Click here for the full project in pdf format</p>
   </div>
 
-</a>
+</a> -->
 
 <h1 class="text-center">Higher Graphic Communication Thematic folio</h1>
 
@@ -96,7 +96,7 @@
     </div>
   </div>  -->
 
-  <p class="footer-arrow"><i class="fa fa-long-arrow-left"></i> Click here for the full project in downloadable pdf (opens in new tab)</p>
+  <!-- <p class="footer-arrow"><i class="fa fa-long-arrow-left"></i> Click here for the full project in downloadable pdf (opens in new tab)</p> -->
 
 </div>
 
