fixed images on zugriff

--- a/folios/folio_zugriff.html
+++ b/folios/folio_zugriff.html
@@ -46,7 +46,7 @@
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/NAME/img/NAME.jpg' alt="Some initial hindge mechanism sketches" />
+  <img class="hor" src='/folios/zugriff/img/initial_sketches.png' alt="Some initial hindge mechanism sketches" />
   <p class="img-footer">Zeiss leads absolutely in the sectors in which they operate, they set the standards and often have a unique presence despite attempts at copying. It was important that this speaker embody that distinction.></p>
 </div>
 
@@ -55,7 +55,7 @@
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/NAME/img/NAME.jpg' alt="Final block model" />
+  <img class="hor" src='/folios/zugriff/img/zugriff_block_model.jpg' alt="Final block model" />
   <p class="img-footer">The final block model put across the physical feel of the device despite not having a ‘proper’ hinge.</p>
 </div>
 
@@ -64,8 +64,13 @@
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/NAME/img/NAME.jpg' alt="" />
+  <img class="hor" src='/folios/zugriff/img/zugriff_annotated.jpg' alt="Annotated render" />
   <p class="img-footer">An annotated render from my presentation showing key points of functionality.</p>
+</div>
+
+<div class="img-box text-center">
+  <img class="hor" src='/folios/zugriff/img/zugriff_sittu.jpg' alt="A collection of use cases" />
+  <p class="img-footer">A final render showing the device in a range of intended locations.</p>
 </div>
 
 <h5>
