Changed the text on data vis, api and front end projects cards to be clearer

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <a href='/folios/data-vis-projects.html' target='_blank'>
           <div class="col-sm-4 project datavis">
             <div class="cover"></div>
-            <h2 class="icon_title">Data Visualisation</h2>
+            <h2 class="icon_title">Data Visualisation Projects</h2>
             <p class="icon_desc">View all data visualisation projects and apps.
             </p>
           </div>
@@ -266,7 +266,7 @@
         <a href='/folios/backend-projects.html' target='_blank'>
           <div class="col-sm-4 project backend">
             <div class="cover"></div>
-            <h2 class="icon_title">API / Microservices</h2>
+            <h2 class="icon_title">API / Microservice Projects</h2>
             <p class="icon_desc">View all backend API and Microservice projects.
             </p>
           </div>
@@ -274,8 +274,8 @@
         <a href='https://codepen.io/collection/DRoyOg/' target='_blank'>
           <div class="col-sm-4 project moreCode">
             <div class="cover"></div>
-            <h2 class="icon_title">More Projects <i class="fa fa-angle-right"></i></h2>
-            <p class="icon_desc">Click here to see more code-related projects.</p>
+            <h2 class="icon_title">More Front End Projects <i class="fa fa-angle-right"></i></h2>
+            <p class="icon_desc">Click here to see more front end projects on Codepen.io.</p>
           </div>
         </a>
       </div>
