--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <a href='/folios/data-vis-projects.html' target='_blank'>
           <div class="col-sm-4 project datavis">
             <div class="cover"></div>
-            <h2 class="icon_title">Data Visualisation Projects</h2>
+            <h2 class="icon_title">Data Visualisation Projects <i class="fa fa-angle-right"></i></h2>
             <p class="icon_desc">View all data visualisation projects and apps.
             </p>
           </div>
@@ -266,7 +266,7 @@
         <a href='/folios/backend-projects.html' target='_blank'>
           <div class="col-sm-4 project backend">
             <div class="cover"></div>
-            <h2 class="icon_title">API / Microservice Projects</h2>
+            <h2 class="icon_title">API / Microservice Projects <i class="fa fa-angle-right"></i></h2>
             <p class="icon_desc">View all backend API and Microservice projects.
             </p>
           </div>
