Re-created the CCV mini page to be actually good now

--- a/folios/folio_ccv.html
+++ b/folios/folio_ccv.html
@@ -4,14 +4,10 @@
   <meta charset="UTF-8">
   <title>CCV Interface Table</title>
   <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-
-      <link rel="stylesheet" href="/css/style_folio.css">
-
+  <link rel="stylesheet" href="/css/style_folio.css">
   <link rel="icon" type="image/png" href="/faveicon.png">
-
 </head>
 
 <body>
@@ -30,14 +26,14 @@
 
 </a>
 
-<h1 class="text-center">CCV Interface Table</h1>
+<h1 class="text-center">CCV Computer Interface Table</h1>
 
 <h4 class="text-center">
-  One of my earliest self-directed projects was to create an interactive computer interface.
+  A very early project to engineer a desk table with built in computer interface extension.
 </h4>
 
 <h5>
-  The device was designed over the summer between fourth and fifth year of high school to use an open source software called Community Core Vison designed for this purpose.
+  This project, developed over the summer of 2013, was one of the first ever long-form, self-directed projects I undertook. A small, moveable work table with a reflected PC display extension and touch capability. It was built on the open source software Community Core Vision (CCV).
 </h5>
 
 <div class="img-box text-center">
@@ -46,7 +42,7 @@
 </div>
 
 <h5>
-  The device utilises a standard webcam converted to pick up infrared, with the IR filter removed and a visible light filter (the end of a roll of film) in place. This camera picks up diffused light from a sheet of light diffusing polymethacrylate. The sheet Is flooded with IR light which diffuses downwards on the users touch, the software then detects touch points or clicks.
+  CCV is an open source software designed to interpolate data from an infra-red camera for use in this kind of project. The above image shows data from an experiment before the LED arrays were even introduced (i.e. working only with ambient IR light), already the software can detect ‘clicks’.
 </h5>
 
 <div class="img-box text-center">
@@ -55,7 +51,16 @@
 </div>
 
 <h5>
-  The assembly was designed to be aesthetic but functional, the less light that leaks in form the outside, the more sensitive the IR camera will be and the clearer the projected image will be.
+  The device works by flooding the display sheet of polymethacrylate with strips of infra-red light via IR LED arrays. A small standard webcam is housed inside, modified to block visible light and pick up IR radiation. The IR light is even throughout the sheet until something comes into contact with the surface, at which point light deflects into the camera. The camera is in continuous use by the CCV software.
+</h5>
+
+<div class="img-box text-center">
+  <img class="ver" src='/folios/ccv/img/ccv_four_mockup.jpg' alt="A working assembly mockup" />
+  <p class="img-footer">Throughout development and testing, several mock-ups were setup to simulate different conditions such as the amount of outside light pollution and camera / projector distance tolerances.</p>
+</div>
+
+<h5>
+  To design the casing, I created a minimalist but aesthetic form, inspired by the set design of one of the Star Trek movies. The display is created by linear setup of a projector reflecting off a mirror. The table has to encase the projector reflection assembly and camera with minimal light bleeding in so avoiding a ‘blocky’ aesthetic was a challenge.
 </h5>
 
 <div class="img-box text-center">
@@ -64,7 +69,9 @@
 </div>
 
 <h5>
-  The final design was going to be built but I decided against it due to cost and storage concerns. The software and dimensioning was functioning as a proof of concept.
+  A full assembly was designed with a wooden frame clad in sections of polymethacrylate to give a smooth aesthetic in line with trends at the time. The table was designed with home / workshop manufacture in mind; I did intend to make it only opting not to due to cost and storage constraints.
+
+  In reflection I realised that I had, for the longest time, brushed away this project because of a restrictive mindset I was in at the time; this has no particularly beautiful renders or SQA-style presentation sheets. However, on closer analysis, I am very satisfied with how this project came out; the design was ready for manufacture, the projector camera assembly was working, acting as a proof of concept, and much was learned about electronics, interface software and engineering techniques which could server useful later on.
 </h5>
 
 <div class="footer">
