--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="col-sm-4 project dungeon">
             <div class="cover"></div>
             <h2 class="icon_title">Rouge-like dungeon crawler</h2>
-            <p class="icon_desc">A React-Redux game based on a classc dungeon crawler.
+            <p class="icon_desc">A React-Redux game based on a classc dungeon crawler game.
             </p>
           </div>
         </a>
@@ -188,7 +188,7 @@
           <div class="col-sm-4 project vote">
             <div class="cover"></div>
             <h2 class="icon_title">Voting app</h2>
-            <p class="icon_desc">A full stack app to create and share straw-poles</p>
+            <p class="icon_desc">A full stack app to create and share straw-poles.</p>
           </div>
         </a>
         <a href='https://glitch.com/edit/#!/adventurous-fender?path=README.md:1:0' target='_blank'>
