--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 </head>
 
 <body>
-  <div id="page_one_anchor"></div>
+  <div id="home"></div>
 
 <div id="header">
   <a href='#'><img src="/img/logo_four.png" id="header_image" /></a>
   <div id="header_cover"></div>
   <div class="navBar">
     <div class="navIcons">
-      <p><a href='#page_four_anchor' class='smooth'>Contact</a></p>
-      <p><a href='#page_three_anchor' class='smooth'>About Me</a></p>
-      <p><a href='#page_two_anchor' class='smooth'>Portfolio</a></p>
+      <p><a href='#contact' class='smooth'>Contact</a></p>
+      <p><a href='#about' class='smooth'>About Me</a></p>
+      <p><a href='#portfolio' class='smooth'>Portfolio</a></p>
       <p><a href='#' class='smooth'>Home</a></p>
     </div>
   </div>
@@ -32,15 +32,15 @@
 
   <div class="navDrop-menu text-center">
     <p><a href='#' class='smooth'>Home</a></p>
-    <p><a href='#page_two_anchor' class='smooth'>Portfolio</a></p>
-    <p><a href='#page_three_anchor' class='smooth'>About Me</a></p>
-    <p><a href='#page_four_anchor' class='smooth'>Contact</a></p>
+    <p><a href='#portfolio' class='smooth'>Portfolio</a></p>
+    <p><a href='#about' class='smooth'>About Me</a></p>
+    <p><a href='#contact' class='smooth'>Contact</a></p>
   </div>
 
 </div>
 
 
-<div id="page_two_anchor"></div>
+<div id="portfolio"></div>
 
 <section id='page_two'>
   <div class="content">
@@ -284,7 +284,7 @@
   </div>
 </section>
 
-<div id="page_three_anchor"></div>
+<div id="about"></div>
 
 <section id="page_profile">
   <div class="content">
@@ -308,7 +308,7 @@ I’m currently studying BA Product Design at Central Saint Martins, UAL, having
 <!--You can read more about my perspective on design here.-->
 </p>
 
-          <div id="page_four_anchor"></div>
+          <div id="contact"></div>
 
           <div class="profile_links">
 
